div->section difformity resolved

--- a/templates/macros/lists.html
+++ b/templates/macros/lists.html
@@ -60,5 +60,5 @@
     {%- endfor -%}
     {#- I don't put pagination here like Terminal does. I don't like how
     the buttons move with the size of post entries in the content div. -#}
-</section>
+</div>
 {% endmacro list_pages %}
