--- a/templates/macros/lists.html
+++ b/templates/macros/lists.html
@@ -14,6 +14,10 @@
         {% if page.extra.cover_image is matching("[.](jpg|jpeg|png|gif)$") %}
         {% set parent_dir_rel_path = posts::parent_dir_rel_path(rel_path=page.relative_path) | trim %}
         {% set imgpath = parent_dir_rel_path ~ "/" ~ page.extra.cover_image %}
+	{% set img300 = resize_image(path=imgpath, op='fill', width=300, height=150) %} 
+	{% set img600 = resize_image(path=imgpath, op='fill', width=600, height=300) %} 
+	{% set img900 = resize_image(path=imgpath, op='fill', width=900, height=450) %} 
+	{% set img1200 = resize_image(path=imgpath, op='fill', width=1200, height=600) %} 
 
         <a href="{{ page.permalink }}">
         <img
@@ -22,10 +26,10 @@
               {% if page.extra.cover_classes %}
               {{ page.extra.cover_classes | join(sep=' ') }}
               {% endif %}"
-        srcset="{{ resize_image(path=imgpath, op='fill', width=300, height=150) | safe }} 300w,
-                {{ resize_image(path=imgpath, op='fill', width=600, height=300) | safe }} 600w,
-                {{ resize_image(path=imgpath, op='fill', width=900, height=450) | safe }} 900w,
-                {{ resize_image(path=imgpath, op='fill', width=1200, height=600) | safe }} 1200w,"
+        srcset="{{ img300.url | safe }} 300w,
+                {{ img600.url | safe }} 600w,
+                {{ img900.url | safe }} 900w,
+                {{ img1200.url | safe }} 1200w,"
         sizes="(max-width: 800px) 90vw,
                 1200px"
         />
