--- a/templates/macros/posts.html
+++ b/templates/macros/posts.html
@@ -118,16 +118,21 @@
     {# set feature_image = page.components[1] ~ "/" ~ page.year ~ "/" ~ page.date ~ "-" ~ page.title ~ "/" ~ image #}
   {% endif %}
 
+  {% set img300 = resize_image(path=imgpath, op='fill', width=300, height=150) %}
+  {% set img600 = resize_image(path=imgpath, op='fill', width=600, height=300) %} 
+  {% set img900 = resize_image(path=imgpath, op='fill', width=900, height=450) %} 
+  {% set img1200 = resize_image(path=imgpath, op='fill', width=1200, height=600) %} 
+
   <img
   alt="{{ page.title | striptags }}"
   class="post-cover
         {% if page.extra.cover_classes %}
         {{ page.extra.cover_classes | join(sep=' ') }}
         {% endif %}"
-  srcset="{{ resize_image(path=imgpath, op='fit', width=300, height=300) | safe }} 300w,
-          {{ resize_image(path=imgpath, op='fit', width=600, height=600) | safe }} 600w,
-          {{ resize_image(path=imgpath, op='fit', width=900, height=900) | safe }} 900w,
-          {{ resize_image(path=imgpath, op='fit', width=1200, height=1200) | safe }} 1200w,"
+  srcset="{{ img300.url | safe }} 300w,
+	  {{ img600.url | safe }} 600w,
+	  {{ img900.url | safe }} 900w,
+ 	  {{ img1200.url | safe }} 1200w,"
   sizes="(max-width: 800px) 90vw,
           1200px">
 {% elif image is matching("[.](svg)$") %}
