--- a/templates/page.html
+++ b/templates/page.html
@@ -1,7 +1,7 @@
 {% import "macros/pagination_page.html" as pagination -%}
 {% import "macros/head.html" as head -%}
 {% import "macros/utils.html" as utils -%}
-
+{% import "macros/toc.html" as toc -%}
 {% extends "index.html" -%}
 
 {%- block math -%}
@@ -23,6 +23,12 @@
         </h1>
         {{ posts::meta(page=page, author=config.extra.show_author) }}
         {{ posts::langs(page=page) }}
+
+        {%- block ToC -%}
+        {%- if page.extra.ToC or config.extra.ToC -%}
+        {{ toc::toc(t=page.toc) }}
+        {%- endif -%}
+        {%- endblock ToC -%}
 
         {% if page.extra.cover_image %}
         <figure>
