use post tags and categories in HTML meta keywords (#50)
for SEO

--- a/templates/macros/head.html
+++ b/templates/macros/head.html
@@ -77,6 +77,24 @@ a[href^="https://"]:not(:where(
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <meta name="description" content="{{ head::description() }}"/>
+
+    {%- if page.taxonomies.tags or page.taxonomies.categories -%}
+        <meta name="keywords" content="
+        {%- if page.taxonomies.categories -%}
+            {%- for cat in page.taxonomies.categories -%}
+                    {{ cat }}, {% endfor -%}
+        {%- endif -%}
+
+        {%- if page.taxonomies.tags -%}
+            {%- for tag in page.taxonomies.tags -%}
+                {%- if loop.last -%}
+                    {{ tag }}
+                {%- else -%}
+                    {{ tag }}, {% endif -%}
+            {%- endfor -%}
+        {%- endif -%}
+        " />
+    {%- endif -%}
 {% endmacro general_meta %}
 
 {% macro katex() %}
