--- a/templates/macros/social.html
+++ b/templates/macros/social.html
@@ -2,12 +2,23 @@
     <meta property="og:title" content="{{ social::og_title() | trim }}" />
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="{{ head::description() }}"/>
-    <!--meta property="og:image" content="{{ social::og_image() |trim }}"/-->
-    {%- if current_url -%}
-        <meta property="og:url" content="{{ current_url }}"/>
-    {%- endif -%}
+
+  {%- if section -%}
     {%- if config.extra.og_preview_img -%}
-        <meta property="og:image" content="{{ get_url(path=config.extra.og_preview_img) }}"/>
+    <meta property="og:image" content="{{ get_url(path=config.extra.og_preview_img) | trim }}"/>
+    {%- endif -%}
+  {%- elif page -%}
+    {%- if page.extra.og_image -%}
+      <meta property="og:image" content="{{ get_url(path=page.extra.og_image) | trim }}"/>
+    {%- elif page.extra.cover_image -%}
+      <meta property="og:image" content="{{ get_url(path=page.extra.cover_image) | trim }}"/>
+    {%- else -%}
+      <meta property="og:image" content="{{ get_url(path=config.extra.og_preview_img) | trim }}"/>
+    {%- endif -%}
+  {%- endif -%}
+
+    {%- if current_url -%}
+       <meta property="og:url" content="{{ current_url }}"/>
     {%- endif -%}
 {% endmacro og_preview %}
 
@@ -34,21 +45,11 @@
     {%- if config.extra.twitter_user %}
     <meta name="twitter:creator" content="{{ config.extra.twitter_user }}">
     {%- endif %}
-    <meta name="twitter:image:alt" content="{{ social::og_image() | trim }}">
+    <!--meta name="twitter:image:alt" content="{{ social::og_image() | trim }}"-->
 {% endmacro twitter_preview %}
 
 {% macro og_image() %}
-  {%- if section -%}
-    {%- if config.extra.og_preview_img -%}
-      {{ get_url(path=config.extra.og_preview_img) }}
-    {%- endif -%}
-  {%- elif page -%}
-    {%- if page.extra.og_image -%}
-      {{ get_url(path=page.extra.og_image) }}  
-    {%- elif page.extra.cover_image -%}
-      {{ get_url(path=page.extra.cover_image) }}
-    {%- endif -%}
-  {%- endif -%}
+
 {% endmacro og_image %}
 
 {% macro og_title() -%}
