og image with current_url

--- a/templates/macros/social.html
+++ b/templates/macros/social.html
@@ -9,9 +9,9 @@
     {%- endif -%}
   {%- elif page -%}
     {%- if page.extra.og_image -%}
-      <meta property="og:image" content="{{ get_url(path=page.extra.og_image) | trim }}"/>
+      <meta property="og:image" content="{{ current_url ~ page.extra.og_image | trim }}"/>
     {%- elif page.extra.cover_image -%}
-      <meta property="og:image" content="{{ get_url(path=page.extra.cover_image) | trim }}"/>
+      <meta property="og:image" content="{{ current_url ~ page.extra.cover_image | trim }}"/>
     {%- else -%}
       <meta property="og:image" content="{{ get_url(path=config.extra.og_preview_img) | trim }}"/>
     {%- endif -%}
