Clearer configurations & other small improvements

--- a/templates/macros/pagination_page.html
+++ b/templates/macros/pagination_page.html
@@ -1,17 +1,19 @@
-{% macro paginate() %}
-{% if page.earlier or page.later or page.lighter or page.heavier %}
+{% macro paginate(page) %}
+{% if config.extra.post_view_navigation and page.earlier or page.later %}
 <div class="pagination">
-  {% if config.extra.read_other_posts %}
   <div class="pagination__title">
-    <span class="pagination__title-h">{{ config.extra.read_other_posts }}</span>
+    {% if config.extra.post_view_navigation_prompt %}
+    <span class="pagination__title-h">{{ config.extra.post_view_navigation_prompt }}</span>
+    {% else %}
+    <span class="pagination__title-h">read other posts</span>
+    {% endif %}
     <hr />
   </div>
-  {% endif %}
 
   <div class="pagination__buttons">
     {% if page.later %}
     <span class="button previous">
-      <a href="{{ page.later.permalink }}">
+      <a href="{{ page.later.permalink | safe }}">
         <span class="button__icon">←</span>
         <span class="button__text">{{ page.later.title }}</span>
       </a>
@@ -19,7 +21,7 @@
     {% endif %}
     {% if page.earlier %}
     <span class="button previous">
-      <a href="{{ page.earlier.permalink }}">
+      <a href="{{ page.earlier.permalink | safe }}">
         <span class="button__icon">→</span>
         <span class="button__text">{{ page.earlier.title }}</span>
       </a>
