--- a/templates/macros/lists.html
+++ b/templates/macros/lists.html
@@ -14,16 +14,16 @@
         {% if page.extra.cover_image is matching("[.](jpg|jpeg|png|gif)$") %}
         {% set parent_dir_rel_path = posts::parent_dir_rel_path(rel_path=page.relative_path) | trim %}
         {% set imgpath = parent_dir_rel_path ~ "/" ~ page.extra.cover_image %}
-	{% set img300 = resize_image(path=imgpath, op='fill', width=300, height=150) %} 
-	{% set img600 = resize_image(path=imgpath, op='fill', width=600, height=300) %} 
-	{% set img900 = resize_image(path=imgpath, op='fill', width=900, height=450) %} 
-	{% set img1200 = resize_image(path=imgpath, op='fill', width=1200, height=600) %} 
+        {% set img300 = resize_image(path=imgpath, op='fill', width=300, height=150) %}
+        {% set img600 = resize_image(path=imgpath, op='fill', width=600, height=300) %}
+        {% set img900 = resize_image(path=imgpath, op='fill', width=900, height=450) %}
+        {% set img1200 = resize_image(path=imgpath, op='fill', width=1200, height=600) %}
 
-        <a href="{{ page.permalink }}">
+        <a class="cover-link" href="{{ page.permalink }}">
         <img
         alt="{{ page.title | striptags }}"
         class="post-cover
-              {% if page.extra.cover_classes %}
+              {%- if page.extra.cover_classes -%}
               {{ page.extra.cover_classes | join(sep=' ') }}
               {% endif %}"
         srcset="{{ img300.url | safe }} 300w,
