--- a/templates/page.html
+++ b/templates/page.html
@@ -22,6 +22,7 @@
             <a href="{{ page.permalink  }}">{{ page.title }}</a>
         </h1>
         {{ posts::meta(page=page, author=config.extra.show_author) }}
+        {{ posts::langs(page=page) }}
 
         {% if page.extra.cover_image %}
         <figure>
