inline footnotes with designated color

--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -620,3 +620,12 @@
     filter: invert(.8);
   }
 }
+
+.footnote-definition {
+  color: var(--accent);
+
+  p {
+    display: inline;
+    color: var(--footnote-color);
+  }
+}
